--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('https://drive.google.com/drive/u/0/folders/1PEq-VC_kTlQZbV-bK9S7i3QG0Rn0VHL-');
+            background-image: url('https://drive.google.com/file/d/1v-reFELK3IugQMsZqDfJ2Qs4dfgV5M0G/view?usp=sharing');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
